# xiu-he

./: .gitignore  GETTING_STARTED.md  README.md  SECRET_OPERATIONS_MANUAL.md  deploy.sh  skill-index.md  sync.sh  使用moltbot指南.md  修荷的朋友们_Discord服务器搭建方案.md  赛博夺舍_推特长文.md  赛博夺舍_推特长文_v2.md  赛博夺舍_推特长文_v3.md
Projects/vibe-kanban/: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  VibeKanban.command  local-build.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
Projects/vibe-kanban/.cargo/: config.toml
Projects/vibe-kanban/.github/workflows/: pre-release.yml  publish.yml  remote-deploy-dev.yml  remote-deploy-prod.yml  test.yml
Projects/vibe-kanban/VibeKanban.app/Contents/: Info.plist
Projects/vibe-kanban/crates/db/: Cargo.toml
Projects/vibe-kanban/crates/deployment/: Cargo.toml
Projects/vibe-kanban/crates/executors/: Cargo.toml  default_mcp.json  default_profiles.json
Projects/vibe-kanban/crates/git/: Cargo.toml
Projects/vibe-kanban/crates/local-deployment/: Cargo.toml
Projects/vibe-kanban/crates/remote/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
Projects/vibe-kanban/crates/review/: Cargo.toml
Projects/vibe-kanban/crates/server/: Cargo.toml  build.rs
Projects/vibe-kanban/crates/services/: Cargo.toml
Projects/vibe-kanban/crates/utils/: Cargo.toml
Projects/vibe-kanban/docs/: AGENTS.md  README.md  docs.json  getting-started.mdx  index.mdx  supported-coding-agents.mdx  troubleshooting.mdx
Projects/vibe-kanban/docs/agents/: amp.mdx  ccr.mdx  claude-code.mdx  cursor-cli.mdx  droid.mdx  gemini-cli.mdx  github-copilot.mdx  openai-codex.mdx  opencode.mdx  qwen-code.mdx
Projects/vibe-kanban/docs/configuration-customisation/: agent-configurations.mdx  creating-task-tags.mdx  global-settings.mdx  keyboard-shortcuts.mdx
Projects/vibe-kanban/docs/core-features/: completing-a-task.mdx  creating-projects.mdx  creating-tasks.mdx  monitoring-task-execution.mdx  new-task-attempts.mdx  resolving-rebase-conflicts.mdx  reviewing-code-changes.mdx  subtasks.mdx  testing-your-application.mdx
Projects/vibe-kanban/docs/integrations/: azure-repos-integration.mdx  github-integration.mdx  mcp-server-configuration.mdx  vibe-kanban-mcp-server.mdx  vscode-extension.mdx
Projects/vibe-kanban/docs/workspaces/: changes.mdx  chat-interface.mdx  command-bar.mdx  creating-workspaces.mdx  git-operations.mdx  index.mdx  interface.mdx  multi-repo-sessions.mdx  preview.mdx  repositories.mdx  sessions.mdx  slash-commands.mdx
Projects/vibe-kanban/frontend/: .eslintrc.cjs  CLAUDE.md  components.json  components.legacy.json  index.html  package.json  postcss.config.cjs  tailwind.legacy.config.js  tailwind.new.config.js  tsconfig.json  vite.config.ts
Projects/vibe-kanban/frontend/public/: site.webmanifest
Projects/vibe-kanban/frontend/src/: App.tsx  main.tsx
Projects/vibe-kanban/npx-cli/: package.json
Projects/vibe-kanban/remote-frontend/: .env.production.example  index.html  package.json  tailwind.config.js  vite.config.ts
Projects/vibe-kanban/remote-frontend/src/: App.tsx  AppRouter.tsx  api.ts  auth.ts  index.css  main.tsx  pkce.ts  vite-env.d.ts
Projects/vibe-kanban/scripts/: check-i18n.sh  clang  prepare-db.js  ring-cc-wrapper.sh  setup-dev-environment.js
Projects/vibe-kanban/shared/: remote-types.ts  types.ts
(+1434 files in other folders)
